# jadepaw

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml  deny.toml  justfile  rustfmt.toml
.config/: nextest.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  security-audit.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/notes/: mvp-core-decisions.md
.planning/phases/01-project-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md  SKELETON.md
.planning/phases/02-wasm-isolation-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md  02-SECURITY.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-agent-runtime/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW-FIX.md  03-REVIEW.md  03-UAT.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-tool-system/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-REVIEW-FIX.md  04-REVIEW.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-session-memory/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-PATTERNS.md  05-RESEARCH.md  05-REVIEW-FIX.md  05-REVIEW.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-skill-system/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-HUMAN-UAT.md  06-PATTERNS.md  06-RESEARCH.md  06-REVIEW-FIX.md  06-REVIEW.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  questions.md
crates/jadepaw-agent/: Cargo.toml
crates/jadepaw-agent/src/: guard.rs  lib.rs  llm.rs  loop.rs  stream.rs  tool_registry.rs  window.rs
crates/jadepaw-agent/tests/: agent_loop.rs  context_window.rs  session_persistence.rs  sse_streaming.rs  termination.rs
crates/jadepaw-bus/: Cargo.toml
crates/jadepaw-bus/src/: lib.rs
crates/jadepaw-core/: Cargo.toml
crates/jadepaw-core/src/: agent_types.rs  capabilities.rs  error.rs  guest_exports.rs  host_functions.rs  lib.rs  skill_types.rs  tool.rs  types.rs
crates/jadepaw-core/tests/: agent_types.rs  capabilities.rs  host_functions.rs  types.rs
crates/jadepaw-db/: Cargo.toml
crates/jadepaw-db/migrations/: 20260604000001_create_sessions.sql  20260605000002_create_skill_index.sql
crates/jadepaw-db/src/: lib.rs  migrations.rs  models.rs  repository.rs  skill_models.rs  skill_repository.rs  sqlite_repo.rs  sqlite_skill_repo.rs
crates/jadepaw-gateway/: Cargo.toml
crates/jadepaw-gateway/src/: lib.rs
crates/jadepaw-server/: Cargo.toml
crates/jadepaw-server/src/: lib.rs  main.rs
crates/jadepaw-server/src/routes/: mod.rs  skills.rs
crates/jadepaw-server/tests/: workspace_smoke.rs
crates/jadepaw-skill/: Cargo.toml
crates/jadepaw-skill/src/: index.rs  injector.rs  lib.rs  loader.rs  manager.rs  manifest.rs  parser.rs  registry.rs  validation.rs
crates/jadepaw-wasm/: Cargo.toml
crates/jadepaw-wasm/src/: engine.rs  epoch.rs  lib.rs  linker.rs  path.rs  pool.rs  session.rs
crates/jadepaw-wasm/src/capability/: mod.rs
crates/jadepaw-wasm/src/host/: filesystem.rs  logging.rs  mod.rs  network.rs
crates/jadepaw-wasm/src/limits/: instance_hard.rs  mod.rs  tenant_quota.rs
crates/jadepaw-wasm/src/tool_impls/: file_tool.rs  http_tool.rs  mod.rs
crates/jadepaw-wasm/tests/: capability.rs  engine_smoke.rs  epoch_yield.rs  limits.rs  path_validation.rs  pool.rs  stress_concurrent.rs
crates/jadepaw-wasm/tests/fixtures/: noop.wat  tool_caller.wat
docs/: arch.mermaid  architecture.md  jadepaw_discussion.md
src/: lib.rs
tests/: workspace_smoke.rs
