# Root workspace manifest for jadepaw
# This file defines workspace-wide settings, dependencies, and features.
# Individual crates live in crates/ — see crates/*/Cargo.toml for per-crate config.

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/user/jadepaw"
rust-version = "1.85"

[workspace.dependencies]
# Core runtime
wasmtime = { version = "45.0", default-features = false }
tokio = { version = "1.52", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = { version = "0.5" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# YAML support deferred to Phase 6 (serde_yaml is deprecated since March 2024)

# Database & caching
sqlx = { version = "0.9", features = ["runtime-tokio-rustls"] }
redis = { version = "1.2", features = ["tokio-comp"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.0", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"

# LLM (Phase 3+; defined here for forward reference. D-05: providers remain
# runtime via Box<dyn Config>, NOT compile-time feature flags.)
async-openai = { version = "0.40", features = ["chat-completion"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.dev]
opt-level = 0

[profile.ci]
inherits = "dev"
debug = 0
incremental = false