[package]
name = "jadepaw-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jadepaw-core = { path = "../jadepaw-core" }
jadepaw-wasm = { path = "../jadepaw-wasm" }
jadepaw-bus = { path = "../jadepaw-bus" }
async-openai = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
futures = "0.3"
serde_json = { workspace = true }
anyhow = "1.0"
async-trait = "0.1"

[dev-dependencies]
wat = "1"
tempfile = "3"

[features]
default = ["single-node"]
single-node = []
cluster = ["redis"]
redis = ["dep:redis"]

[dependencies.redis]
workspace = true
optional = true