[package]
name = "jadepaw-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jadepaw-core = { path = "../jadepaw-core" }
jadepaw-wasm = { path = "../jadepaw-wasm" }
jadepaw-db = { path = "../jadepaw-db" }
async-openai = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
anyhow = "1.0"
tracing = "0.1"
tiktoken-rs = "0.12"

[dev-dependencies]
async-trait = "0.1"
wat = "1"
tempfile = "3"

