[package]
name = "jadepaw-bus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jadepaw-core = { path = "../jadepaw-core" }
jadepaw-wasm = { path = "../jadepaw-wasm" }
tokio = { workspace = true }

[features]
default = ["single-node"]
single-node = []
cluster = ["redis"]
redis = ["dep:redis"]

[dependencies.redis]
workspace = true
optional = true