[package]
name = "jadepaw-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jadepaw-core = { path = "../jadepaw-core" }
sqlx = { workspace = true, features = ["sqlite", "chrono", "uuid", "runtime-tokio"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"

[features]
default = ["single-node"]
single-node = []
cluster = ["sqlx-postgres"]

[dependencies.sqlx-postgres]
package = "sqlx"
version = "0.9"
optional = true
features = ["postgres", "runtime-tokio", "chrono", "uuid"]