[package]
name = "jadepaw-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jadepaw-core = { path = "../jadepaw-core" }
jadepaw-wasm = { path = "../jadepaw-wasm" }
jadepaw-bus = { path = "../jadepaw-bus" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }

[features]
default = ["single-node"]
single-node = []
cluster = []