[package]
name = "jadepaw-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jadepaw-core = { path = "../jadepaw-core" }
jadepaw-wasm = { path = "../jadepaw-wasm" }
jadepaw-bus = { path = "../jadepaw-bus" }
jadepaw-agent = { path = "../jadepaw-agent" }
jadepaw-skill = { path = "../jadepaw-skill" }
jadepaw-gateway = { path = "../jadepaw-gateway" }
jadepaw-db = { path = "../jadepaw-db" }
axum = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "chrono", "uuid", "runtime-tokio"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }
anyhow = "1.0"

[features]
default = ["single-node"]
single-node = []
cluster = []