[package]
name = "jadepaw-skill"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jadepaw-core = { path = "../jadepaw-core" }
jadepaw-wasm = { path = "../jadepaw-wasm" }
jadepaw-agent = { path = "../jadepaw-agent" }
jadepaw-db = { path = "../jadepaw-db" }
serde = { workspace = true }
serde_json = { workspace = true }
gray_matter = { workspace = true }