[package]
name = "jadepaw-skill"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jadepaw-core = { path = "../jadepaw-core" }
jadepaw-db = { path = "../jadepaw-db" }
serde = { workspace = true }
serde_json = { workspace = true }
gray_matter = { workspace = true }
dashmap = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = "0.1"
anyhow = "1.0"
uuid = { workspace = true }

[dev-dependencies]
tempfile = "*"