[package]
name = "jadepaw-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jadepaw-core = { path = "../jadepaw-core" }
wasmtime = { workspace = true, features = ["pooling-allocator", "async", "cranelift", "runtime"] }
tokio = { workspace = true }
anyhow = "1"
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wat = "1"
tempfile = "3"

[features]
default = ["single-node"]
single-node = []
cluster = ["redis"]
redis = ["dep:redis"]

[dependencies.redis]
workspace = true
optional = true