[package]
name = "jadepaw-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jadepaw-core = { path = "../jadepaw-core" }
wasmtime = { workspace = true, features = ["pooling-allocator", "async", "cranelift", "runtime"] }
tokio = { workspace = true }
dashmap = { workspace = true }
anyhow = "1"
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = { workspace = true }

[dev-dependencies]
wat = "1"
tempfile = "3"

[features]
default = ["single-node"]
single-node = []
cluster = ["redis"]
redis = ["dep:redis"]

[dependencies.redis]
workspace = true
optional = true